--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="hero-content">
                     <img src="https://cdn-icons-png.flaticon.com/512/3135/3135768.png" alt="imagen de ejemplo">
                     <h1>Samuel Ayala</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum officia voluptates harum? Sapiente expedita quae molestias fuga alias culpa id voluptas quam eveniet pariatur esse tempore facere, commodi non omnis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum officia voluptates harum? Sapiente expedita quae molestias fuga alias culpa id voluptas quam eveniet pariatur esse tempore facere, commodi non omnis. <a href="https://github.com/SamuelJt68">git</a></p>
                     <h1>Preguntas Frecuentes</h1>
                     <div class="faq">
                         <div class="faq-item">
